# zipget-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  copilot-instructions.md  debug-test.toml  demo-tag-pinning.toml  demo_recipe.json  demo_recipe.toml  lock-test.toml  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: pre-commit-checks.mdc  rust-quality-checks.mdc
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  integration-tests.yml
docs/: refactoring-plan.md
recipes/: amazon-linux-pack.toml  linux-pack-locked.toml  linux-pack.toml
src/: cache.rs  cli.rs  crypto.rs  lib.rs  main.rs  main.rs.backup  main_new.rs  models.rs  recipe.rs  runner.rs  update.rs  utils.rs  vars.rs
src/archive/: mod.rs  tar.rs  utils.rs  zip.rs
src/download/: auth.rs  github.rs  http.rs  mod.rs  s3.rs
src/install/: executable.rs  mod.rs  shim.rs  utils.rs
test/: README.md  ci-test-suite.py  integration-test.toml  lock-test-no-tags.toml  lock-test-selective.toml  lock-test.toml  roughgrep-test.toml  test-suite.py  working-test.toml
