[package]
name = "zipget"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ureq = { version = "2.0", features = ["json"] }
md5 = "0.7"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
glob-match = "0.2"
dirs = "6.0.0"

# Alternative lighter dependencies (commented out):
# sha2 = "0.10"  # Instead of md5

[profile.release]
strip = true          # Remove debug symbols
lto = true           # Link-time optimization  
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller panic handling
